test/src/e2e_vm_tests/test_programs/should_fail/multiple_structs_with_the_same_name/src/module0.sw
library;

pub struct Thing {}

impl Thing {
    pub fn new() -> Self {
        Thing {}
    }
}
